B-F Backup Sandbox 30.4.12/src/objects/Wholesaler_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Banner__c</fullName>
        <description>Distributor assigned banner for retailer</description>
        <inlineHelpText>Distributor assigned banner for retailer</inlineHelpText>
        <label>Banner</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECC_Retalier_Name__c</fullName>
        <description>ECC Retailer / Banner Name</description>
        <label>ECC Retalier Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECC_Wholesaler_Name__c</fullName>
        <description>ECC Distributor Name</description>
        <label>ECC Wholesaler Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMAA_Number__c</fullName>
        <description>Retailer LMAA # from Distributor</description>
        <inlineHelpText>Retailer LMAA # from Distributor</inlineHelpText>
        <label>LMAA Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <description>Retailer license # from Distributor</description>
        <inlineHelpText>Retailer license # from Distributor</inlineHelpText>
        <label>License Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Function__c</fullName>
        <description>ECC partner Function</description>
        <inlineHelpText>ECC partner Function (i.e. ZE - Retailer, ZQ - Banner)</inlineHelpText>
        <label>Partner Function</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Distributor Partner type in ECC</description>
        <inlineHelpText>Distributor Partner type in ECC (i.e. ZE - Retailer, ZQ - Banner)</inlineHelpText>
        <label>Partner Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Number__c</fullName>
        <description>ECC Retailer / Banner #</description>
        <inlineHelpText>ECC Retailer / Banner #</inlineHelpText>
        <label>Retailer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Retailer  address from Distributor</description>
        <inlineHelpText>Retailer  address from Distributor</inlineHelpText>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Customer_Name__c</fullName>
        <description>Retailer/ Banner Partner name from Distributor</description>
        <inlineHelpText>Retailer/ Banner Partner name from Distributor</inlineHelpText>
        <label>Wholesaler Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Wholesaler Customer</label>
    <nameField>
        <label>Wholesaler Customer Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wholesaler Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>